--- a/resource/template/magnifier.html
+++ b/resource/template/magnifier.html
@@ -1,4 +1,5 @@
-<div class="_img_magnifier_wrapper">
+<div>
+    <div class="_img_magnifier_count_tip">0/0</div>
     <!--loading-->
     <div class="_img_magnifier_spinner">
         <div class="_img_magnifier_bounce1"></div>
@@ -6,11 +7,11 @@
     </div>
     <!--loading-->
     <div class="_img_magnifier_box">
-        <div class="_img_magnifier_item">
+       <!--  <div class="_img_magnifier_item">
             <img class="_img_magnifier_view" src="/resource/img/img2.jpg" alt="">
         </div>
         <div class="_img_magnifier_item">
                 <img class="_img_magnifier_view" src="/resource/img/img3.jpg" alt="">
-        </div>
+        </div> -->
     </div>
 </div>
